--- a/Sprint1/src/components/Main_Components/Header/Header.scss
+++ b/Sprint1/src/components/Main_Components/Header/Header.scss
@@ -1,5 +1,6 @@
-@import '../../partials/Variables.scss';
-@import '../../partials/Mixins.scss';
+@import '../../../partials/Variables.scss';
+@import '../../../partials/Mixins.scss';
+@import '../../../partials/Global.scss';
 
 .main {
     
@@ -83,7 +84,7 @@
     margin-bottom: 0.5rem;
     border-radius: 4px;
     background-color: $form-input;
-    background-image: url(../../assets/Icons/SVG/Icon-search.svg);
+    background-image: url(../../../assets/Icons/SVG/Icon-search.svg);
     background-repeat: no-repeat;
     background-position: 1rem 1rem;
 
@@ -92,5 +93,8 @@
     }
 }
 
+.upload-btn {
+    @include header-3;
+}
 
 
