--- a/Sprint1/src/partials/Global.scss
+++ b/Sprint1/src/partials/Global.scss
@@ -1,6 +1,6 @@
-@import 'variables';
-@import 'typography';
-@import 'mixins';
+@import './Variables.scss';
+@import './Typography.scss';
+@import './Mixins.scss';
 
 // Reset
 * {
@@ -15,3 +15,17 @@
     color: $primary-text;
 }
 
+.site__container {
+    padding: 2rem 1rem;
+
+    @include mediaQ($tablet-width){
+        padding: 1.5rem 1.5rem;
+        @include max-desktop--center;
+    }
+
+    @include mediaQ($desktop-width){
+        padding: 0 1.5rem;
+
+        @include desktop--center;
+    }
+}
