--- a/Sprint1/src/components/Main_Components/Main/Main_Video/Main_Video.scss
+++ b/Sprint1/src/components/Main_Components/Main/Main_Video/Main_Video.scss
@@ -27,3 +27,10 @@
         }
     }
 }
+
+.main-video-play-icon__container {
+    height: 10px;
+    width: 600px;
+    display: flex;
+    background-color: black;
+}
