Working video list using state

--- a/Sprint1/src/components/Main_Components/Main/Main.scss
+++ b/Sprint1/src/components/Main_Components/Main/Main.scss
@@ -23,3 +23,16 @@
         }
     }
 }
+
+.related-video {
+
+    &-section__container {
+        padding-top: 1.75rem;
+    }
+
+    &-section__header {
+        @include header-5;
+        margin-bottom: 1.5rem;
+    }
+
+}
