--- a/Sprint2/src/pages/main.scss
+++ b/Sprint2/src/pages/main.scss
@@ -1,6 +1,28 @@
-@import '../../../partials/Global.scss';
-@import '../../../partials/Mixins.scss';
-@import '../../../partials/Variables.scss';
+@import '../partials/Global.scss';
+@import '../partials/Mixins.scss';
+@import '../partials/Variables.scss';
+
+.main-video {
+
+    &-info {
+        max-width: 44.5rem;
+
+        @include mediaQ($desktop-width){
+            border-right: 1px solid $divider;
+            min-width: 44.5rem;
+            margin-right: 1.5rem;
+        }
+    }
+
+    &-related-data__container {
+        display: flex;
+        flex-direction: column;
+    
+        @include mediaQ($desktop-width){
+            flex-direction: row;
+        }
+    }
+}
 
 
 .comment {
@@ -70,3 +92,15 @@
 }
 
 
+.related-video {
+
+    &-section__container {
+        padding-top: 1.75rem;
+    }
+
+    &-section__header {
+        @include header-5;
+        margin-bottom: 1.5rem;
+    }
+
+}
