tidied folder structure and neatened upp css

--- a/Sprint2/src/pages/Main/Main.scss
+++ b/Sprint2/src/pages/Main/Main.scss
@@ -1,6 +1,6 @@
-@import '../partials/Global.scss';
-@import '../partials/Mixins.scss';
-@import '../partials/Variables.scss';
+@import '../../partials/Global.scss';
+@import '../../partials/Mixins.scss';
+@import '../../partials/Variables.scss';
 
 .main-video {
 
