--- a/Sprint2/src/components/Header/Header.scss
+++ b/Sprint2/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
-@import '../../../partials/Variables.scss';
-@import '../../../partials/Mixins.scss';
-@import '../../../partials/Global.scss';
+@import '../../partials/Variables.scss';
+@import '../../partials/Mixins.scss';
+@import '../../partials/Global.scss';
 
 .main {
     
@@ -73,7 +73,7 @@
     height: 3rem;
     background-color: grey;
     border-radius: 100%;
-    background-image: url('../../../assets/Images/Mohan-muruge.jpg');
+    background-image: url('../../assets/Images/Mohan-muruge.jpg');
     background-size: cover;
     overflow: hidden;
 }
@@ -89,7 +89,7 @@
     margin-bottom: 0.5rem;
     border-radius: 4px;
     background-color: $form-input;
-    background-image: url(../../../assets/Icons/SVG/Icon-search.svg);
+    background-image: url('../../assets/Icons/SVG/Icon-search.svg');
     background-repeat: no-repeat;
     background-position: 1rem 1rem;
 
