--- a/Sprint2/src/components/main/MainVideo/MainVideo.scss
+++ b/Sprint2/src/components/main/MainVideo/MainVideo.scss
@@ -6,6 +6,8 @@
     width: 100%;
     max-width: 700px;
     position: relative;
+    display: flex;
+    justify-content: center;
 
     @include mediaQ($tablet-width){
         height: 51.3vw;
@@ -21,18 +23,20 @@
         display: flex;
         justify-content: center;
         background-color: $primary-bckgrnd;
-        
+        align-items: flex-end;
 
         @include mediaQ($tablet-width){
             max-height: 531px;
         }
     }
+    
     &-controls__container {
         position: absolute;
-    }
-
-    &-controls__bck-col{
-        background-color: rgba($color: $primary-bckgrnd, $alpha: 0.7);
+        padding: 0 1rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0.5rem;
     }
 }
 
