--- a/Sprint3/client/src/components/Header/Header.scss
+++ b/Sprint3/client/src/components/Header/Header.scss
@@ -10,6 +10,7 @@
         height: 10.5625rem;
         padding: 0 1rem;
         justify-content: space-evenly;
+        align-items: center;
 
         @include mediaQ($tablet-width){
             flex-direction: row;
